@@ -1,6 +1,7 @@
 vNEXT (in development)
 
-* Added NickChangeFailed event for when nicknames are in use, banned, etc
+ * Added NickChangeFailed event for when nicknames are in use, banned, etc
+ * Added sendPart method
  * (Internal) Moved message processors into their own package
 
 v0.10.0
